 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-2746: Pig doesn't detect all forms of compression extensions properly (qwertymaniac via daijy)

PIG-2770: Allow easy inclusion of custom build targets (julien)

PIG-2697: pretty print schema via pig.pretty.print.schema (rangadi via jcoveney)

PIG-2673: Allow Merge join to follow an ORDER statement (dvryaboy)

PIG-2699: Reduce the number of instances of Load and Store Funcs down to 2+1 (julien)

PIG-2166: UDFs to join a bag (hluu via daijy)

PIG-2651: Provide a much easier to use accumulator interface (jcoveney via daijy)

PIG-2658: Add pig.script.submitted.timestamp and pig.job.submitted.timestamp in generated Map-Reduce job conf (billgraham)

PIG-2735: Add a pig.version.suffix property in build.xml to easily override with a build number (julien)

PIG-2705: outputSchema modification from scripting UDFs (levyjoshua via julien)

PIG-2724: Make Tuple Iterable (jcoveney)

PIG-2733: Add *.patch, *.log, *.orig, *.rej, *.class to gitignore (jcoveney)

PIG-2732: Let's get rid of the deprecated Tuple methods (jcoveney)

PIG-2638: Optimize BinInterSedes treatment of longs (jcoveney)

PIG-2727: PigStorage Source tagging does not need pig.splitCombination to be turned off (prkommireddi via dvryaboy)

PIG-2710: Implement Naive CUBE operator (prasanth_j via dvryaboy)

PIG-2714: Pig documentation on TOP funcation has issues  (daijy)

PIG-2066: Accumulators should be able to early-terminate (jcoveney)

PIG-2600: Better Map support (prkommireddi via jcoveney)

PIG-2711: e2e harness: cache benchmark results between test runs (thw via daijy)
