@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-2748: Change the names of the jar produced in the build folder to match maven conventions (julien)
+
 PIG-2746: Pig doesn't detect all forms of compression extensions properly (qwertymaniac via daijy)
 
 PIG-2770: Allow easy inclusion of custom build targets (julien)
